tests/NormalTests/paczka1/fuzzy1/69076263.err
Error in line 1: naeY S288 13,6
Error in line 26: HEaqhVHV3a S288 15,6
